<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <DUT Name="ST_SelectorM3" Id="{fa3c6e97-4043-47eb-be01-712b94ca71b0}">
    <Declaration><![CDATA[TYPE ST_SelectorM3 EXTENDS ST_Selector :
STRUCT
		
		rLowFlow	:	REAL;
		rHighFlow	:	REAL;
		rGasFlow	:	REAL; //El-flow
        
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>