<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <DUT Name="ST_SensirionFM" Id="{a6b8d86f-c2b0-4a79-92ac-31fbf668167c}">
    <Declaration><![CDATA[TYPE ST_SensirionFM :
STRUCT
	Ctrl	:	ST_SensirionFMControl;
	Stat	:	ST_SensirionFMStatus;
    
    {attribute 'pytmc' := '
        pv: Reset
        io: o
     '}
    xFMReset : BOOL; // Reset on rising edge
    
    {attribute 'pytmc' := '
        pv: Flow
        io: i
     '}
	rFlow : REAL; //uL/min
    
    {attribute 'pytmc' := '
        pv: OoR
        io: i
     '}
	xFMOoR	:	BOOL; // Out of range (too high)
    
    {attribute 'pytmc' := '
        pv: FlowValid
        io: i
     '}
	xFlowValid	:	BOOL; // driver completes successfully
    
    (*
	field(ZRST, "OK")
	field(ONST, "OoR>")
	field(TWST, "<OoR")
	field(THST, "Flow Invalid")
	*)
    {attribute 'pytmc' := '
        pv: State
        io: i
     '}
	iFMState	:	INT;
    
    
	xFMModeReq	:	BOOL; //for sensirion calibration range (request)
	xFMModeRb	:	BOOL; //for sensirion calibration range (readback
    
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>